--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -3,9 +3,11 @@ FROM google/dart
 WORKDIR /app
 ADD pubspec.* /app/
 RUN pub get --no-precompile
-ADD . /app/
+ADD config.yaml /app/
+ADD ./bin /app/bin/
+ADD ./lib/ /app/lib/
 RUN pub get --offline --no-precompile
 
 WORKDIR /app
 
-ENTRYPOINT ["pub", "run", "aqueduct:aqueduct", "serve", "--port", "$PORT"]
+ENTRYPOINT ["pub", "run", "aqueduct:aqueduct", "serve"]
